--- a/vue-router-tag-learn/public/index.html
+++ b/vue-router-tag-learn/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,17 +11,6 @@
       href="//at.alicdn.com/t/font_1048253_tqf0en2ttme.css"
     />
     <script>
-      ;(function() {
-        // 链接里带入参数debug=true以加载eruda移动端调试工具
-        var src = '//cdn.jsdelivr.net/npm/eruda'
-        if (
-          !/debug=true/.test(window.location) &&
-          localStorage.getItem('active-eruda') != 'true'
-        )
-          return
-        document.write('<scr' + 'ipt src="' + src + '"></scr' + 'ipt>')
-        document.write('<scr' + 'ipt>eruda.init();</scr' + 'ipt>')
-      })()
     </script>
   </head>
   <body>
